--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 kqtquickcharts (4:4.12.80-0ubuntu1) UNRELEASED; urgency=low
 
   * Initial release
+  * New upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 11 Mar 2014 10:54:32 +0000
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Mar 2014 21:48:15 +0000
