--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kqtquickcharts (4:4.12.95-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:4.12.95-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 20 Mar 2014 20:35:35 +0100
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sun, 23 Mar 2014 12:38:34 +0100
 
 kqtquickcharts (4:4.12.90-0ubuntu1) trusty; urgency=low
 
