--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kqtquickcharts (4:4.12.97-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:4.12.97-0ubuntu1) trusty; urgency=medium
 
   * New upstream release candidate
 
- -- Philip Muškovac <yofel@kubuntu.org>  Fri, 28 Mar 2014 02:11:24 +0100
+ -- Philip Muškovac <yofel@kubuntu.org>  Wed, 02 Apr 2014 11:37:37 +0200
 
 kqtquickcharts (4:4.12.95-0ubuntu1) trusty; urgency=medium
 
