--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kqtquickcharts (4:4.13.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream KDE Software Compilation release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 10 Apr 2014 11:36:44 +0100
+
 kqtquickcharts (4:4.12.97-0ubuntu1) trusty; urgency=medium
 
   * New upstream release candidate
