--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kqtquickcharts (4:4.13.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 29 May 2014 23:48:31 +0200
+
 kqtquickcharts (4:4.13.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream KDE Software Compilation release
