--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+kqtquickcharts (4:14.11.97-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream RC release
+  * Merge with Debian, remaining changes:
+   - fix debian/copyright
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 28 Nov 2014 19:23:43 +0100
+
 kqtquickcharts (4:4.14.0-1) unstable; urgency=medium
 
   * New upstream release.
@@ -9,6 +17,56 @@ kqtquickcharts (4:4.13.1-1) unstable; urgency=medium
   * New upstream release.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 30 May 2014 00:31:56 +0200
+
+kqtquickcharts (4:4.14.2-0ubuntu1) vivid; urgency=medium
+
+  * New upstream release
+  * Fix copyright to use LGPL-KDEeV as short license and fix spaces.
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Oct 2014 05:57:51 -0700
+
+kqtquickcharts (4:4.14.1-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Mon, 22 Sep 2014 17:28:46 +0200
+
+kqtquickcharts (4:4.14.0-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 20 Aug 2014 13:19:58 +0200
+
+kqtquickcharts (4:4.13.97-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release RC
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 01 Aug 2014 17:03:31 +0200
+
+kqtquickcharts (4:4.13.95-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 30 Jul 2014 18:29:48 +0200
+
+kqtquickcharts (4:4.13.90-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Thu, 24 Jul 2014 23:23:43 +0200
+
+kqtquickcharts (4:4.13.2-0ubuntu1) utopic; urgency=medium
+
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 18 Jun 2014 12:04:25 +0100
+
+kqtquickcharts (4:4.13.2-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+  * Merge with Debian, no changes
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 17 Jun 2014 10:41:56 +0100
 
 kqtquickcharts (4:4.13.0-0ubuntu1) trusty; urgency=medium
 
