--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kqtquickcharts (4:14.12.2-1~) UNRELEASED; urgency=medium
+kqtquickcharts (4:14.12.2-1) experimental; urgency=medium
 
   * Prepare Debian release.
   * Bump Standards-Version to 3.9.6, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 19 Feb 2015 10:44:08 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 19 Feb 2015 11:34:41 +0100
 
 kqtquickcharts (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
