--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-kqtquickcharts (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release
   * wrap-and-sort 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:21:49 -0700
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 01:48:18 +0200
 
 kqtquickcharts (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
