--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kqtquickcharts (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
 
- -- Clive Johnston <clivejo@aol.com>  Wed, 16 Sep 2015 23:58:16 +0100
+ -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 17:17:21 +0100
 
 kqtquickcharts (4:15.08.0-0ubuntu1) wily; urgency=medium
 
