--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kqtquickcharts (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Vivid backport
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 11:14:35 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 16 Oct 2015 23:13:04 -0700
 
 kqtquickcharts (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
