--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kqtquickcharts (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kqtquickcharts (4:15.12.3-0ubuntu1) xenial; urgency=medium
 
   * New upstream bugfix release
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 20:07:34 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 15:44:12 -0700
 
 kqtquickcharts (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
