--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,4 @@
-kqtquickcharts (4:14.12.2-2~1.gbp733412) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @7334123b1b41d470b6f5c40edc0dde4740cd5027 **
+kqtquickcharts (4:14.12.2-2) unstable; urgency=medium
 
   [ Maximiliano Curia ]
   * Add upstream metadata (DEP-12)
@@ -9,7 +7,7 @@ kqtquickcharts (4:14.12.2-2~1.gbp733412) UNRELEASED; urgency=medium
   [ Automatic packaging ]
   * Bump Standards-Version to 3.9.8
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Thu, 14 Apr 2016 13:56:49 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 21 May 2016 21:10:10 +0200
 
 kqtquickcharts (4:14.12.2-1) experimental; urgency=medium
 
