--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kqtquickcharts (4:16.08.0-0r1) UNRELEASED; urgency=medium
+
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Aug 2016 22:56:36 +0200
+
 kqtquickcharts (4:14.12.2-2) unstable; urgency=medium
 
   [ Maximiliano Curia ]
