--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-kqtquickcharts (4:17.08.1-1~) UNRELEASED; urgency=medium
+kqtquickcharts (4:17.08.3-0r1) UNRELEASED; urgency=medium
 
+  [ Maximiliano Curia ]
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
 
- -- Maximiliano Curia <maxy@debian.org>  Sun, 10 Sep 2017 11:46:09 +0200
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 10 Sep 2017 11:46:09 +0200
 
 kqtquickcharts (4:17.08.1-0neon) xenial; urgency=medium
 
