--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ kqtquickcharts (4:17.08.3-0r1) UNRELEASED; urgency=medium
   [ Pino Toscano ]
   * New upstream release.
   * Simplify watch file, and switch it to https.
+  * Bump Standards-Version to 4.1.1, no changes required.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 10 Sep 2017 11:46:09 +0200
 
