--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kqtquickcharts (4:17.08.3-0r1) UNRELEASED; urgency=medium
+kqtquickcharts (4:17.08.3-1) experimental; urgency=medium
+
+  * Team upload.
 
   [ Maximiliano Curia ]
   * New upstream release (17.08.1)
@@ -15,7 +17,7 @@ kqtquickcharts (4:17.08.3-0r1) UNRELEASED; urgency=medium
     - make sure to not ship these files
   * Use https in copyright.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 10 Sep 2017 11:46:09 +0200
+ -- Pino Toscano <pino@debian.org>  Fri, 01 Dec 2017 20:39:07 +0100
 
 kqtquickcharts (4:17.08.1-0neon) xenial; urgency=medium
 
