--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kqtquickcharts (4:17.08.3-2) UNRELEASED; urgency=medium
+
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 09:26:54 +0100
+
 kqtquickcharts (4:17.08.3-1) experimental; urgency=medium
 
   * Team upload.
