--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kqtquickcharts (4:17.08.3-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Bump Standards-Version to 4.1.2, no changes required.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 09:26:54 +0100
 
