--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kqtquickcharts (4:17.08.3-2) UNRELEASED; urgency=medium
+kqtquickcharts (4:17.08.3-2) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Team upload.
+  * Upload to unstable.
   * Bump Standards-Version to 4.1.2, no changes required.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 09:26:54 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 09 Dec 2017 09:28:45 +0100
 
 kqtquickcharts (4:17.08.3-1) experimental; urgency=medium
 
